# Gaussian

./: README.md  io.github.diegoivan.gaussian.json  meson.build
data/: io.github.diegoivan.gaussian.appdata.xml.in  io.github.diegoivan.gaussian.desktop.in  io.github.diegoivan.gaussian.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: MathUtils.vala  application.vala  enums.vala  gaussian.gresource.xml  main.vala  meson.build  window.ui  window.vala
src/Calculus/: Calculus.vapi  asa239.c  asa239.h
src/Models/: DistributionTypes.vala  Result.vala
src/Pages/: BinomialPage.vala  ChiSquaredPage.vala  FDistributionPage.vala  GeometricPage.vala  HypergeometricPage.vala  NormalPage.vala  Page.vala  PoissonPage.vala  StudentPage.vala
src/Widgets/: BinomialPage.vala  ChiSquaredPage.vala  DataList.vala  DistributionRow.vala  FDistributionPage.vala  GeometricPage.vala  HypergeometricPage.vala  NavigationStack.vala  NavigationSwitcher.vala  NormalPage.vala  NumberRow.vala  Page.vala  PoissonPage.vala  ResultsList.vala  StudentPage.vala
src/gtk/: binomial-page.ui  chisquared-page.ui  data-list.ui  distribution-row.ui  fdistribution-page.ui  geometric-page.ui  hypergeometric-page.ui  navigation-switcher.ui  normal-page.ui  page.ui  poisson-page.ui  results-list.ui  student-page.ui
src/gtk/pages/: binomial-page.ui  chisquared-page.ui  fdistribution-page.ui  geometric-page.ui  hypergeometric-page.ui  normal-page.ui  page.ui  poisson-page.ui  student-page.ui
